Update through everware

--- a/higgs_kaggle/baseline.ipynb
+++ b/higgs_kaggle/baseline.ipynb
@@ -55,16 +55,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2016-06-21 11:47:46--  https://2016.mlhep.yandex.net/data/higgs/public_train_10000.root\n",
-      "Resolving 2016.mlhep.yandex.net... 2a02:6b8::1:208, 213.180.193.208\n",
-      "Connecting to 2016.mlhep.yandex.net|2a02:6b8::1:208|:443... connected.\n",
+      "wget: /root/miniconda/envs/rep_py2/lib/libcrypto.so.1.0.0: no version information available (required by wget)\n",
+      "wget: /root/miniconda/envs/rep_py2/lib/libssl.so.1.0.0: no version information available (required by wget)\n",
+      "--2016-06-21 13:14:14--  https://2016.mlhep.yandex.net/data/higgs/public_train_10000.root\n",
+      "Resolving 2016.mlhep.yandex.net (2016.mlhep.yandex.net)... 2a02:6b8::1:208\n",
+      "Connecting to 2016.mlhep.yandex.net (2016.mlhep.yandex.net)|2a02:6b8::1:208|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 932820 (911K) [application/octet-stream]\n",
       "Saving to: 'public_train_10000.root'\n",
       "\n",
-      "public_train_10000. 100%[===================>] 910.96K  2.29MB/s    in 0.4s    \n",
+      "100%[======================================>] 932,820     3.73MB/s   in 0.2s   \n",
       "\n",
-      "2016-06-21 11:47:47 (2.29 MB/s) - 'public_train_10000.root' saved [932820/932820]\n",
+      "2016-06-21 13:14:15 (3.73 MB/s) - 'public_train_10000.root' saved [932820/932820]\n",
       "\n"
      ]
     }
@@ -97,16 +99,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2016-06-21 11:47:47--  https://2016.mlhep.yandex.net/data/higgs/public_test.root\n",
-      "Resolving 2016.mlhep.yandex.net... 2a02:6b8::1:208, 213.180.193.208\n",
-      "Connecting to 2016.mlhep.yandex.net|2a02:6b8::1:208|:443... connected.\n",
+      "wget: /root/miniconda/envs/rep_py2/lib/libcrypto.so.1.0.0: no version information available (required by wget)\n",
+      "wget: /root/miniconda/envs/rep_py2/lib/libssl.so.1.0.0: no version information available (required by wget)\n",
+      "--2016-06-21 13:14:17--  https://2016.mlhep.yandex.net/data/higgs/public_test.root\n",
+      "Resolving 2016.mlhep.yandex.net (2016.mlhep.yandex.net)... 2a02:6b8::1:208\n",
+      "Connecting to 2016.mlhep.yandex.net (2016.mlhep.yandex.net)|2a02:6b8::1:208|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 91931408 (88M) [application/octet-stream]\n",
       "Saving to: 'public_test.root'\n",
       "\n",
-      "public_test.root    100%[===================>]  87.67M  2.31MB/s    in 40s     \n",
+      "100%[======================================>] 91,931,408  26.1MB/s   in 4.1s   \n",
       "\n",
-      "2016-06-21 11:48:28 (2.18 MB/s) - 'public_test.root' saved [91931408/91931408]\n",
+      "2016-06-21 13:14:21 (21.2 MB/s) - 'public_test.root' saved [91931408/91931408]\n",
       "\n"
      ]
     }
