Update through everware

--- a/day_2/basic_seminars/2.3 Challenging exercise on generative models.ipynb
+++ b/day_2/basic_seminars/2.3 Challenging exercise on generative models.ipynb
@@ -12,6 +12,156 @@
     "4. Compute ROC AUC evaluation of your prediction. I suggest using sklearn.metrics.roc_auc_score\n",
     "5. BONUS. Make your model sklearn-compatible. It should be a class inherited from sklearn.base.BaseEstimator and provide .fit and .predict_proba methods."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import root_pandas\n",
+    "events = root_pandas.read_root(\"/notebooks/public_train_100000.root\")\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.cross_validation import cross_val_score\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.metrics import roc_auc_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "train, test = train_test_split(events)\n",
+    "from sklearn.neighbors import KernelDensity\n",
+    "boolean = train['target'] == 1\n",
+    "no_boolean = train['target'] == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "kd_signal  = KernelDensity().fit(train[boolean])\n",
+    "kd_background  = KernelDensity().fit(train[no_boolean])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.990254  , -0.60917877, -0.01244022, ..., -1.06056138,\n",
+       "       -1.38487901, -1.49518335])"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "likelihood_signal = kd_signal.score_samples(test)\n",
+    "likelihood_background = kd_background.score_samples(test)\n",
+    "likelihhood_score = -likelihood_signal/likelihood_background\n",
+    "likelihhood_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.57859228890238357"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(test[\"target\"],likelihhood_score )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7f26314fcd50>]"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAEACAYAAABI5zaHAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xd8VFX6x/HPMTS7CIuuBlTUtbF2sBA11kQBUbHQAliR\nn4g/KeqqK7iKi4qCNQuiCKxiAZQiVdwgCgomMz8iRSkWelezCAwk5/fHSSDEkEySmbl3Jt/365WX\nmeTm3ofr5OFw7nOeY6y1iIhIYjnA6wBERCTylNxFRBKQkruISAJSchcRSUBK7iIiCUjJXUQkAZWb\n3I0xbxlj1htjcss45mVjzEJjTI4x5pzIhigiIhUVzsh9OJC+v28aY9oAjay1ZwB3Fh4vIiIeKje5\nW2tnA1vLOOQ6YFThsQGghjEmOTLhiYhIZURizj0ZWFns9arCr4mIiEci9UDVlHitngYiIh6qEYFz\nrAIaAl8Xvk4u/No+jDFK+CIilWCtLTmALlckRu6TgQ4AxphzgXxr7erSDrTW6sNa+vbt63kMfvnQ\nvdC9qO73oqDAMmKEpUEDy1VXbeEvf2lNixYtWL16NdZWfkxc7sjdGDMauAyob4xZCfQFahYm6yHW\n2rHGmMuNMQuBncDtlY5GRKQa+ewz6NgRjjgCrr12IpMn38nAgQPJyMjAmAoP1vdRbnK31rYL45ju\nVYpCRKQa2bIF2rSBL76AJ56Ahx6C+fPr8swzQY455piIXCMSc+5SQampqV6H4Bu6F3vpXuyVyPdi\n2TK4+mpo3hzy8qBOHff1lJSUiF7HVGVOp0IXMsbG6loiIn40axakpkK/fm7EHs7MizEG69EDVRER\n2Y+CApg6FZo1c4m9ZcsJHHbYoLASe1VoWkZEJAoWLIB334V//Qt+/RXuuWct27e3xtoG3Hbb0Khf\nXyN3EZEIKCiAL7+EBx+Eo4+Gs86CYBDGjNnF448/yUcfnUWfPt2ZOHFixB6alkXJXUSkCr79FjIy\noEYNuOoq+P13ePZZ2LXLTceMG/cAgcB8gsEgnTp1qnKJY7j0QFVEpAKshc8/h48/hilTYPNm6NwZ\nunaFk0/+4/F5eXkccsghlU7qlX2gquQuIhKGLVtg1Cj4298gPx9uvx1uucU9JE1Kit51K5vc9UBV\nRKQU1sL338PEiTBjBkyfDpddBu+/Dy1b/rGMMRQKkZeXR7169bwJuATNuYuIFLNyJXTv7h6Knnoq\n5OTArbfC+vWQlQWtWv0xsQcCAZo2bcrrr7/uScyl0chdRKq9bdtgyBD38fPPcP31MHIkXHNN2QuN\nQqEQ/fv3JzMzc09PGL9QcheRaslayM2Ft96Cl16CSy+Fp5+GG26AmjXL//lAIECXLl1o2LAhwWDk\nesJEih6oiki1k5Xllv8vXAg33+wejl54YcXO8eKLL1K/fv2IdHAsi6plRETKMW4cDBoE8+dDly5u\nxF67ttdRlU3VMiIipdiwAYYNgw8/dJ/fcQeMHw9HHul1ZNGlahkRSUihEDz3HJx4IsybB//7v/Dj\nj/DUUxVL7IFAgP/85z9RizNalNxFJKFY60bqDRu6FaTTp7vVpJ07h/egtEgoFKJv376kpaWxefPm\n6AUcJZqWEZGE8Msv8Morrvrll1/g9dehXbn7yJXO75Uw4dDIXUTi2pYtcN99UL8+BALw9tuwdm3l\nE/urr75KWloavXr1ilkHx2jQyF1E4o61MHq029lo6FC44gpXs37aaVU/90UXXRS3o/XilNxFJG6s\nXu2S+jPPuATfrh0sXuzaBETKeeedF7mTeUjTMiLie+vXu7r0E06Ab75xtepbtrh59Ugm9kSi5C4i\nvrVlC/Tu7Zp4JSXBd9/Be++5ypeqLAotqoR58sknIxeszyi5i4jvDBsGp58O9erBmjXw9dfw5ptu\n5F5VRR0cs7Ozufvuu6t+Qp/SnLuI+MacOfA//wPLl7sOjenpkVtJWloHx1hteecFJXcR8VxODtx1\nFyxYAP36QY8ecNhhkb3GY489xuLFixOiEiYcahwmIp5ZsMBtjLFwITzwADz6qNtoOhq2b99OnTp1\n4m60XtnGYZpzF5GY27TJtdk9+2xo1sztfvTEE9FL7AAHHnhg3CX2qlByF5GY+eIL6NQJkpPht9/c\nrkcDB8JBB0XuGqFQiHXr1kXuhHFKyV1Eom77dujWzW2Mcfzx7oHp2LEuyUdSUSXMyy+/HNkTxyEl\ndxGJmmXLoH17NzL//ns3x/6Pf8Cxx0b2OsU7OPbq1Yv+/ftH9gJxSMldRCJuzRq49163evTww91I\nfeZMaNAg8tcqXrceDAbp1KlTtZpb3x8ldxGJmG3bIDMTmjRxvV8CAfe6cePoXTM7OzvuOzhGg0oh\nRaTKNm2CkSNdxcvFF8Pf/w6XXOJ1VIlBpZAiEnMLFkBGBvzpT/Dpp3t3PlJi956Su4hUWF6ea+h1\n1llw3HHuYenkydFN6oFAgEmTJkXvAgmm3ORujEk3xuQaYxYZYx4u5ftHG2NmGmMWGmO+M8Z0jU6o\nIuK1/Hw35VK/Pkyb5trvPv00nHxy9K5ZvBJm27Zt0btQgilzPZgxpjaQCaQA64G5xpjp1tpAscO6\nA/OstX8zxtQHlhpj3rbW7oxa1CISU/n5MGCAm1P/859h3jw3ao+2RNjL1CvljdwvABZaa1dba3cD\n7wMtShyzEihq8XMYsFGJXSRxDBsGhxzipl2ys2HVqtgk9qFDhybEXqZeKa+TQzIueRdZBaSWOOYN\n4DNjzBrgUODWiEUnIp5Zt85tipGbCzNmQEpKbK+fkpKi0XoVlJfcw6ldfBQIWmtTjTEnAjOMMWdZ\na/NKHtivX789n6emppKamlqBUEUkFn75xfVSf/ppuPtueOcdN8cea6effnrsL+oDWVlZZGVlVfk8\nZda5G2MuAR621rYsfN0HqGWt7V/smKnAU9baLwtfzwT+Zq2dV+JcqnMX8bHVq6FnTxgzBi68EF57\nzXVtjAVrrVaV7ke06tznA02MMccaY2riplymlDhmOXBVYRBHAacDP1Y0EBHxxpo10KGDq3ipUweW\nLoUvv4xNYi+qhOnVq1f0L1bNlJncrbU7gG7ANOD/gHHW2hxjTNdiJY//AFKMMYuAz4HHrbUbohm0\niETGG2+4pJ6f7+bWR4yIbquA4or3hOndu3dsLlqNqP2ASDU0fz489xx8/jm8/jq0aRO7a1e3vUyr\nqrLTMtpDVaSayMuD/v1dQg8E4KGH3Mj9iCNiG8czzzyzp4OjKmGiRyN3kQS3YYPbKGPcONfUq0cP\nSEuLfVIvEgqFqFmzpkbrYVLjMBHZh7Wu8uWoo+Cww2DFCveg9LbbvEvsALVq1VJijwFNy4gkmLw8\nGDTIfTRo4Lo1Xnll7OMo2su0UaNGsb+4aOQukih+/x3eegvq1YMJE2D4cFi82JvEXlQJM3jw4Nhf\nXACN3EXi3rJlbqOMwYPddMvHH8N113kTS2mVMOINJXeROLVuHdxzj9sgo3Vr+OwzOP987+JRB0d/\n0bSMSJxZvNg19Przn+Gkk9wc+5gx3iZ2gKVLl6qDo4+oFFIkTvz0E3Tq5OrUe/SA7t2ju0mG+INK\nIUUS1KJFcPXVcPzxcMYZsH49vPSSEruUTcldxKeshRdecNMtTZvCr7+6VgENGngbVyAQ4L333vM2\nCCmXkruID23YANdcA48+6ra0e+YZtxDJS8X3Mi0oKPA2GCmXkruIj+zc6UoaTz0VGjVyFTFNmngd\n1b4dHIPBIO3bt/c6JCmHSiFFfGLpUkhPd7seTZrk+sD4wdtvv81DDz2kDo5xRtUyIh5btAheftlt\nbde9O7z4ItSs6XVUe61YsYI6deqovNEjqpYRiTPWwvjxrgJm2zZYsgReecVfiR2gcePGSuxxSNMy\nIh7YvBlatXJTMVOmuOkYP9BepolDI3eRGLLW9YE5/XQ48URYu9Yfib2oEubuu+/2OhSJEI3cRWLk\n66/hwQdh40YYNcqVOvpB8Z4wQ4cO9TociRCN3EWi7PPP3bx68+bQsiUEg/5I7MXr1tUTJvFo5C4S\nJf/9Lzz8MGRmQseObt/SWrW8jmqvV155RXuZJjCVQopEwYcfuimYs892yb1hQ68j+qPdu3eTlJSk\nB6g+V9lSSI3cRSJo0SK4+2439TJqFNx0k9cR7V+NGvr1T2SacxeJgPx8twjpwguhcWPXntcviT0U\nCrF06VKvw5AYU3IXqaKiB6b//CdMnuxG7PXrex2VU9QTZtCgQV6HIjGm5C5SSb/9Bi1aQFqa2xnp\nhx8gJcXrqJxQKMQTTzxBWloavXv35rXXXvM6JIkxTbqJVEJ2Ntx7Lxx+OPz4Ixx1lNcR7RUIBOjc\nuTPHHXecKmGqMY3cRSpg7Vpo187VrLdp47o3+imxA6xbt44+ffowYcIEJfZqTKWQImEaM8aN1jt3\ndmWOycleRyTVgUohRaJk0ybIyICpU+Hjj6F1a68jEimfpmVEyjBvHlxwARQUuD1M/ZTYc3JyGDZs\nmNdhiE8puYvsx7hxcNllLqFPner9HqZFiiph0tPTOfDAA70OR3xK0zIiJcydC488AsuWwbvvwo03\neh3RXjk5OXTp0kWVMFIujdxFihk82FXCXHcdfP+9vxL7O++8Q3p6uiphJCyqlhHBrTLt0wdyc115\n4xVXeB3RH61ZswZASb2aidoeqsaYdGNMrjFmkTHm4f0ck2qMmWeMCRpjZlU0CBGv7NwJjz/u+qt3\n6ABbtvgzsYNL6krsEq4y59yNMbWBTCAFWA/MNcZMt9YGih1zNPAqcIW1doMx5shoBiwSCQUF8MEH\n0K0bHHGE28f08su9jmqvgoICDjhAs6ZSeeW9ey4AFlprV1trdwPvAy1KHNMWeN9auwHAWrsl8mGK\nRM7EiW5V6WOPwfPPw4oV/knsRZUw7du39zoUiXPlJfdkYGWx16sKv1bcKcAxxpi5xpgFxpi7Ihmg\nSCT16wedOsGgQa4a5q67wC97VeTk5HD++eeTk5PDiy++6HU4EufKK4UM5wloEtAEuAI4CPjKGDPX\nWruwqsGJRNLDD8NLL7kNNRo39jqavUKhEP379yczM5OBAweSkZGh3ZGkyspL7quA4huENWTfkTzA\nz8Aaa+12YHvhA9UzgT8k9379+u35PDU1ldTU1IpHLFJBK1bAHXfArFluH1M/JXaAt956S3uZyh5Z\nWVlkZWVV+TxllkIaY+oAS4DmwAZgDtDVWptT7JhzgOeBNKA2MB/oYK0NljiXSiEl5oYPhwcegK5d\n3cKkevW8juiPCgoKMMZotC6likrjMGvtDmNMN2Aabn5+lLU2xxjTtfD7Q6y1AWPMVGABUBMYVjKx\ni3hhyBDXxXHKFEhP9zqa/VNVjESDFjFJwpkzx21S/eOP8PXX0KSJ1xE5RXuZnnHGGV6HInEkaouY\nROJFKOQWIKWkwG23uS6OfknswWCQZs2aqQpGYkbJXRLCsGFw6KFucdKGDfDEE1DDB23xQqEQffv2\n5ZprrqFnz55q0Ssx44O3v0jlzZsHPXu6zamzsuCii7yOaK8FCxbQqVMnkpOTVQkjMaeRu8StQYPc\nNEzz5rB8ub8SO8Cvv/5Kz549mThxohK7xJweqErc2brVteKdNQuys+Hcc72OSCR69EBVqoVZs+C0\n0+Dww+G335TYRfZHyV3iwrZtbpPqli1hwAC3UfWhh3odlRMMBhk8eLDXYYjsQ8ldfK2gAJ59FpKT\nYdcuWLUKunTxR7Ov4pUw9fy49FWqNVXLiG/l57vNqZctg48+cptV+yGpgxutd+nSRZUw4lsauYsv\nDR3qeq5v3QrBIKSm+iexjx07dk/duiphxK9ULSO+smMH3Hmnm1N/7jm3U5LfWq9s3ryZnTt3KqlL\nTFS2WkbJXXxj0yb3wHTVKrcg6aSTvI5IxHsqhZS4tmwZnHKK67W+dKl/Ent+fr7XIYhUipK7eG7h\nQtfs65FH4N134cADvY5obyXM9ddf73UoIpWi5C6e2bLFbX3XvDk8+ij06eN1RE5RB8fs7GzeeOMN\nr8MRqRQld/FEdjacfbZr+BUIQI8eXkf0xw6OqoSReKY6d4mp9evdlneTJ7uVpj17eh3RXh9++KH2\nMpWEoWoZiYn8fFfaOGgQtG0Lffv6bz/Toven9jIVP4nKHqoikTB6tJtTr1cPPv8cTj3V64hKp6Qu\niUTJXaJm1Sro2NHNq7/+Olx3nT9WmYZCIb799lvOVUtJSWB6oCpRsXUrpKW5uvUVK6BFC38kdu1l\nKtWFkrtE3IYNrhLmjDPgzTchKcnriP5YCTNq1CivQxKJKk3LSERt2gSXXgqXXw7Dh/tjtJ6bm0tG\nRoY6OEq1opG7RMz48XDMMXDlla6rox8SO7gWAqpbl+pGpZBSZT/95KphPvkEMjOhXTuvIxJJHGoc\nJp4YO9bNrx9wAHz/vRK7iF8ouUulrF8P6emu1PGZZ2DUKGjQwNuYgsEgTz31lLdBiPiEkrtUyKZN\nrg/M0Ue7Vadr1rgNNbxUvBLmuOOO8zYYEZ9QcpewjRgBJ57oatiXLYMZM6BuXW9jKt7BMRgM0qlT\nJ28DEvEJlUJKuRYuhBtucKP2V1+FjAyvI3I++eQTbr/9dgYOHEhGRobaB4gUo2oZKdPgwfDgg67p\n14MPQg0fDQfy8vLIy8tTeaMkNO2hKhH37rvQoYNr9nXJJV5HI1I9qRRSIqpvX+jSBXJy/JHYd+3a\n5XUIInFFyV328dtvbk79jTdg+XI45xxv4ymqhLnqqqvQv/xEwqfkLntMmQKHHw6//AJz5kDDht7G\nU7wSZvTo0XpgKlIBSu5CQYGbhmnVyo3YJ06E44/3Lh7tZSpSdeXWPhhj0oHngSRghLX22f0c1xSY\nC9xqrR0X0Sglatasgfbt3X9zc+G007yOCKZNm6a9TEWqqMxqGWNMbWAJkAKsxyXve6y1gRLHJQEz\ngN+B4dbasaWcS9UyPjN6tEvs99wDL70Edep4HZGjvUxF9opWtcwFwEJr7Wpr7W7gfaBFKcfdD4wB\nNlY0AIk9a10Xx/btYfp0GDLEP4kd3JtZiV2kaspL7snAymKvVxV+bQ9jzLFAayCz8EsanvvYkiXQ\nrBm89x6sXAlXX+1dLKFQiDlz5ngXgEgCKy+5h5OoBwOPFM65mMIP8aFRo+D886FNG9cbJjm5/J+J\nlqJKmEGDBqnEUSQKynugugooXhDXkH1H8gDnAe8V/jO6PnCtMWaXtXZCyZP169dvz+epqamkpqZW\nPGKpsJ074YUX4LHH3Dx727bexRIKhejfvz+ZmZnqCSNSiqysLLKysqp8nvIeqNbBPVBtDmwA5gBd\nrbU5+zl+ODCxtGoZPVD1xvjx0KsXHHWUK3M8/XTvYlm0aBHt27cnOTmZoUOHqhJGJAyVfaBa5sjd\nWrvDGNMNmIabwhllrc0xxnQt/P6QSkUrUZeXB089Bc8/7/Yzvesu7/c0rVWrFj179tRoXSQG1Dgs\nAc2dC5df7jaqfvZZaNLE64hEpLLUOEwA+OADSEmB116DSZOU2EWqKyX3BLFrl5t6uf12+PhjuPNO\n76ZhgsEgffr0URWMiIeU3BPAnDnQuDF8/73bNalVK2/iKN4T5q9//as3QYgIoOQe9wYNgubN4b77\nICvLu4Zfpe1lqoemIt7x0aZpUhH5+dCjh2sd8NVXcMEF3sUyc+ZM2rVrp7p1ER9RtUwcWrECrr8e\nateGGTPgyCO9jWfnzp1s3rxZdesiUaA9VKuJjRvhwguhZUu3ebUGySKJTaWQ1cCYMdCggRu1e5XY\nd+zYEfuLikiFKbnHiWefhe7dXR37oEGxT+xFlTApKSkqcRSJA3qg6nM7d8L997u+MLm53ixKCgaD\ndOnSheTkZCZMmKAHpiJxQCN3H/v6a9fwKyfHbYMX68SuvUxF4pdG7j41ZYrru/7aa27VqRfmzp1L\nTk6O9jIViUOqlvGhF1+EAQPcVEzr1l5HIyJeikrLX4mtggLo1g0mTIDZs+GUU7yOSETilebcfeL3\n3+Haa+GbbyAYjG1iD4VCzJw5M3YXFJGoU3L3gQUL4LTT4NBD3Yj9qKNid+2injCvvvoqBQUFsbuw\niESVkrvH3nwTzjoLevZ0i5QOOig21y1ZCTNu3DgOOEBvB5FEoTl3j1jrFiWNHQszZ8IVV8Tu2kuW\nLKFt27YkJyerEkYkQalaxgPWuha9kya5OfYGDWJ7/TVr1jBz5kw6duyoBUkiPqfGYXEiFILHH4dx\n41yr3vr1vY5IRPxMpZBxIC/P7Zh0yCEwbZoSu4hEj56gxVDPnnDcca4f+1/+Ev3rBYNB7r33XlXB\niFRDSu4xMnSo27j644+j39GxeCXMxRdfrHl1kWpI0zIx8NFHrrPjF19AcnJ0r1W8g6MqYUSqL43c\no+yjj6BDB/ffpk2je605c+aog6OIAKqWiaqPPoLOnd1UTCzq2PPz89m4cSNHH3109C8mIjGhbfZ8\npm9faN8eRoyI3QKlpKQkJXYRATTnHnE//QS9erlVp9FsALZt2zYOPvjg6JxcROKeRu4RtHIlHH+8\n6w+zYkV0EntRJUyzZs3Iz8+P/AVEJCEouUeAtfD883DeedC/P4wcCXXrRv46RR0cs7OzmTFjBklJ\nSZG/iIgkBE3LVNH27W5ufd48+OADSE2N/DVCoRD9+/cnMzOTgQMHkpGRodp1ESmTknsVbN0KN90E\nO3fCrFlw0knRuU5ubi7BYFB16yISNpVCVtLPP8OVV8Ill0BmJtSu7XVEIpKIVAoZQ2PHwsknQ5s2\n8NZbSuwi4j9K7hX073/DzTe7BD9gQGTPHQqFmDRpUmRPKiLVkpJ7mKx19esPPOB6xLRsGdnzF1XC\nDB06lN27d0f25CJS7YSV3I0x6caYXGPMImPMw6V8P8MYs6DwmG+MMedFPlTv7N7t2giMG+d2Tmre\nPHLnLrmX6fjx46lRQ8+5RaRqys0ixpjaQCaQAqwH5hpjpltrA8UO+w5obq3NM8akA8OAc6IRcKxt\n3+6mYTZtchtsnHBC5M69bNkybr75ZnVwFJGIK7daxhhzKfCQtbZl4eveQB1r7dP7Of5QYLm1tkGJ\nr8ddtUxBgauIMcY1/zrssMief+vWrUyZMoV27dqpbl1EShXNbfaSgZXFXq8CUss4viswvqKB+NHf\n/gZr1kBODkSjjUvdunVp37595E8sItVeOMk97OG2MSYVuAModVa6X79+ez5PTU0lNRrLOSNg9263\nucaYMbBoUXQSu4hIabKyssjKyqryecKZlrkEeLjYtEwfoJa1tn+J484ExgHp1tplpZwnLqZltm6F\nVq3cZtYzZkCDBuX/THmCwSADBw5k+PDh1KxZs+onFJFqI5qLmOYDTYwxxxpjagK3AlNKXLwRLrF3\nLC2xx4v//hfOP991dvz666on9uKVMNdcc42qYEQkZsrNNtbaHcaYbsA03F8Go6y1OcaYroXfHwI8\nAdQFMgsfDO6y1jaLXtiRt2EDtG7tPh81quqbWGsvUxHxknrL4DbYuOgiuPVWeO45qFWraucLBAKk\npaWpg6OIVFllp2WqfXKfPRuuv96tPn388cic01rLpk2b+NOf/hSZE4pItaXkXgnTpkHbtvDkk9Cj\nh9fRiIj8kbpCVtCQIa4/zJAhVUvsv/76a+SCEhGJkGqZ3D/5BO69Fz77zM2zV0ZRJcy5555LKBSK\nbIAiIlVU7ZL7lCluxP7vf7uNNiojEAjQtGlTsrOzmT17NrWq+gRWRCTCqlVynzQJbrgB3n4bOnSo\n+M8XjdbT0tLo3bs3EydOVImjiPhStVlVM2wYPPigawB27bWVO8fy5cv59ttvVbcuIr6X8NUy1roG\nYG+/DaNHw+WXxzwEEZFKi2ZXyLiVnw/XXQfffQfZ2XDssV5HJCISGwk75752LTRt6nrEVDSxh0Ih\nPvzww+gFJyISZQmZ3Netg1NPdcl91SqoVy/8ny2qhBk5ciQ7d+6MXpAiIlGUcMl9+nQ46SRIT4d/\n/QsOOSS8nytZCTNhwgRq164d3WBFRKIkoebcJ0yANm1g5Eho1y78n/vhhx+44YYbaNSokSphRCQh\nJEy1zMiR0LkzfPklXHxxxX5227ZtTJo0iVtvvVUdHEXEV6p147DsbLfJxvjxrsOjiEiiqLaNw1av\nduWOL7+sxC4iUiSuk/vGjXDhhXDffdC9e/nHBwIBbrrpJnbs2BH94EREPBS3yb2gAK66yk3H/P3v\nZW+LV7wS5sYbb1QVjIgkvLislsnPh9tuc9vhjRlTdmIPBAJ06dJFlTAiUq3EZXK//Xb49FNYuBCS\nkvZ/3HfffUdaWhovvPACHTt2VCWMiFQbcVUtU1AAGRkwebJL7OEMwrdu3UrdunWrdF0REa9Ui8Zh\nL78M8+bBypXhrzxVYheR6ihuRu65ua4yZvx49yC1pM2bN1OvIk1kRETiQELXuW/dCmeeCQMG/DGx\nF1XCnHPOOfz+++/eBCgi4jO+T+75+S6xt2oF99+/7/eKOjjm5OTw1VdfcdBBB3kTpIiIz/g6uVsL\nHTvCKae46ZgipXVwVImjiMhevn6gOmAAzJwJS5bsW8u+du1alixZorp1EZH98O0D1XfecaP22bMh\nJSWKgYmI+FjClELm5UHXrjB2LEydqsQuIlIZvppzz8+HSy91dezr1sHll4cYMWIEsfrXhYhIovBN\ncl+8GC67zC1OmjgRfvzRVcKMGTNGJY4iIhXki+T++uuuu+OVV8LUqSEGDdq3Eubggw/2OkQRkbji\n+Zz79OmuH/vnn8MJJ6zi4otbqIOjiEgVeVots3EjnHsuPP88tG3r6tcnTZrEjTfeqA6OIiLE4R6q\nq1dD06Zwyy0weHDZPdlFRKqrqPWWMcakG2NyjTGLjDEP7+eYl40xC40xOcaYc8o756efQmqqaynw\n0ktK7CIikVZmcjfG1AYygXTgTODmksnbGNMGaGStPQO4Exi+v/Pl57uFSbfcsosaNYYwYMBvVf4D\nxKOsrCyvQ/AN3Yu9dC/20r2ouvJG7hcAC621q621u4H3gRYljrkOGAVgrQ0ANYwxyaWdrGvXfD77\nbA1JSad3jo/iAAAD8UlEQVTy6KMHccQRh1Yx/PikN+5euhd76V7spXtRdeVVyyQDK4u9XgWkhnFM\ncuF/9zFy5DouvfQxRo6crUoYEZEoKm/kHu7T1pKz5qX+3MCBc5gxY7gSu4hIlJVZLWOMuQR42Frb\nsvB1H6CWtbZ/sWPeBKZYa8cUvv4WSLPWri5xLvUQEBGphGg0DpsPNDHGHAtsAG4FupY4ZjLQERhj\njDkXyC+Z2CsbnIiIVE6Zyd1au8MY0w2YhpvCGWWtzTHGdC38/hBr7VhjzOXGmIXATuD2qEctIiJl\nitkiJhERiZ2INw6LxqKneFXevTDGZBhjFhQe840x5jwv4oyFcN4Xhcc1NcbsNsbcFMv4YiXM349U\nY8w8Y0zQGDMr1jHGShi/H0cbY2YW5orvimYMEpEx5i1jzHpjTG4Zx1Qsb1prI/YB1AZ+AI7FTfnM\nB84pcUwb4OPCz88BgpGMwS8fYd6LZsChhZ+nAwGv4/bqXhQelwR8BkwC2ngdt0fviaOBb4EGha+P\n9DpuD+/F08A/Cz+vD2wFansde5TuxyWF+TB3P9+vcN6M9Mg9ooue4ly598JaO89am1f48kvcGz0R\nhfO+ALgfGANsjGVwMRTOfWgLvG+t3QBgrd0S4xhjJZx7sRI4rPDzw4CN1tqdMYwxZqy1s3F/ee1P\nhfNmpJP7/hY0VfSYRFDRP2dXYHxUI/JOufeisCKrNa7dBYS/xiKehPOeOAU4xhgzt3DK7q6YRRdb\n4dyLN4AzjDFrgP8DHohRbH5U4bwZ6X7uEV30FOfC/jMZY1KBO4DmUYvGW+Hci8HAI9Zaa1y/50Qs\nnQ3nPiQBTYArgIOAr4wxc621C6MaWeyFcy8exU0/pBpjTgRmGGPOKvav3eqmQnkz0iP3VUDDYq8b\nsu/fNqUdU2qrggQQzr3AGHMmMAy43lpb1j/L4lk49+I84D1jzA+4+cXXjTHXxyi+WAnnPvwMTLfW\nbrfWbgZm4Zr2JZpw7kUK8CGAtXY5bo7+tJhE5z8VzpuRTu57Fj0ZY2riFj1NKXHMZKADQFmLnhJA\nuffCGNMIGAd0tNYu8yDGWCn3XlhrG1trT7DWnoCbd+9mrZ3gQazRFM7vxydAijEmyRhzEHARsDjG\nccZCOPdiOXAVgDHmKOB04MdYBukjFc6bEZ2WsVr0tEc49wJ4AqgLZBbuPLXLWtvMq5ijJcx7kfDC\n/P0IGGOmAguAmsAwa23Qu6ijI8z3xD+AfxtjFuGmqx4vetCcaIwxo4HLgPrGmJVAX9z//0rnTS1i\nEhFJQBFfxCQiIt5TchcRSUBK7iIiCUjJXUQkASm5i4gkICV3EZEEpOQuIpKAlNxFRBLQ/wMClODH\nFajZCgAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f2631505450>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%matplotlib inline\n",
+    "from sklearn.metrics import roc_curve\n",
+    "fpr_rt_lm, tpr_rt_lm, _ = roc_curve(test[\"target\"],likelihhood_score)\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.figure(1)\n",
+    "plt.plot([0, 1], [0, 1], 'k--')\n",
+    "plt.plot(fpr_rt_lm, tpr_rt_lm, label='RT + LR')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
