--- a/day_2/basic_seminars/2.2 Generative models - exercise.ipynb
+++ b/day_2/basic_seminars/2.2 Generative models - exercise.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -144,13 +144,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "a = np.exp(kde.score_samples(mix[:10000]))"
+    "import sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sklearn.metrics.roc_auc_score()"
    ]
   },
   {
