--- a/higgs_kaggle/baseline.ipynb
+++ b/higgs_kaggle/baseline.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -55,19 +55,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wget: /root/miniconda/envs/rep_py2/lib/libcrypto.so.1.0.0: no version information available (required by wget)\n",
-      "wget: /root/miniconda/envs/rep_py2/lib/libssl.so.1.0.0: no version information available (required by wget)\n",
-      "--2016-06-21 13:14:14--  https://2016.mlhep.yandex.net/data/higgs/public_train_10000.root\n",
-      "Resolving 2016.mlhep.yandex.net (2016.mlhep.yandex.net)... 2a02:6b8::1:208\n",
-      "Connecting to 2016.mlhep.yandex.net (2016.mlhep.yandex.net)|2a02:6b8::1:208|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 932820 (911K) [application/octet-stream]\n",
-      "Saving to: 'public_train_10000.root'\n",
-      "\n",
-      "100%[======================================>] 932,820     3.73MB/s   in 0.2s   \n",
-      "\n",
-      "2016-06-21 13:14:15 (3.73 MB/s) - 'public_train_10000.root' saved [932820/932820]\n",
-      "\n"
+      "wget: /root/miniconda/envs/rep_py2/lib/libcrypto.so.1.0.0: no version information available (required by wget)\r\n",
+      "wget: /root/miniconda/envs/rep_py2/lib/libssl.so.1.0.0: no version information available (required by wget)\r\n",
+      "File `public_train_10000.root' already there; not retrieving.\r\n"
      ]
     }
    ],
@@ -77,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -99,19 +89,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wget: /root/miniconda/envs/rep_py2/lib/libcrypto.so.1.0.0: no version information available (required by wget)\n",
-      "wget: /root/miniconda/envs/rep_py2/lib/libssl.so.1.0.0: no version information available (required by wget)\n",
-      "--2016-06-21 13:14:17--  https://2016.mlhep.yandex.net/data/higgs/public_test.root\n",
-      "Resolving 2016.mlhep.yandex.net (2016.mlhep.yandex.net)... 2a02:6b8::1:208\n",
-      "Connecting to 2016.mlhep.yandex.net (2016.mlhep.yandex.net)|2a02:6b8::1:208|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 91931408 (88M) [application/octet-stream]\n",
-      "Saving to: 'public_test.root'\n",
-      "\n",
-      "100%[======================================>] 91,931,408  26.1MB/s   in 4.1s   \n",
-      "\n",
-      "2016-06-21 13:14:21 (21.2 MB/s) - 'public_test.root' saved [91931408/91931408]\n",
-      "\n"
+      "wget: /root/miniconda/envs/rep_py2/lib/libcrypto.so.1.0.0: no version information available (required by wget)\r\n",
+      "wget: /root/miniconda/envs/rep_py2/lib/libssl.so.1.0.0: no version information available (required by wget)\r\n",
+      "File `public_test.root' already there; not retrieving.\r\n"
      ]
     }
    ],
@@ -128,20 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import root_numpy\n",
-    "data = pandas.DataFrame(root_numpy.root2array('datasets/public_train_10000.root'))\n",
+    "data = pandas.DataFrame(root_numpy.root2array('/notebooks/public_train_100000.root'))\n",
     "test = pandas.DataFrame(root_numpy.root2array('datasets/public_test.root'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -335,7 +315,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -540,7 +520,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -598,7 +578,7 @@
        " 'jet1_eta']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,22 +597,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['m_jj', 'm_jjj', 'm_jlv', 'm_wwbb', 'm_bb', 'm_wbb', 'm_lv']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "high_level_features = ['m_jj', 'm_jjj', 'm_jlv', 'm_wwbb', 'm_bb', 'm_wbb', 'm_lv']"
    ]
@@ -689,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -799,6 +768,53 @@
    "source": [
     "# take probability to be 1 class to compute ROC AUC\n",
     "roc_auc_score(validation_data.target, proba[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "svm_clf = SVC(probability=True, )\n",
+    "svm_clf.fit(training_data[features], training_data.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "svm_proba = svm_clf.predict_proba(validation_data[features])\n",
+    "roc_auc_score(validation_data.target, svm_proba[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "forest_clf= RandomForestClassifier(n_estimators = 500, njobs = -1)\n",
+    "forest_clf.fit(training_data[features], training_data.target)\n",
+    "forest_proba = forest_clf.predict_proba(validation_data[features])\n",
+    "roc_auc_score(validation_data.target, svm_proba[:, 1])"
    ]
   },
   {
