--- a/higgs_kaggle/baseline.ipynb
+++ b/higgs_kaggle/baseline.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -578,7 +578,7 @@
        " 'jet1_eta']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -658,13 +658,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "training_data, validation_data = train_test_split(data, random_state=11, train_size=0.66)"
+    "training_data, validation_data = train_test_split(data, random_state=11, train_size=0.8)"
    ]
   },
   {
@@ -779,14 +779,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from sklearn.svm import SVC\n",
-    "svm_clf = SVC(probability=True, )\n",
+    "svm_clf = SVC(probability=True, cache_size=1000)\n",
     "svm_clf.fit(training_data[features], training_data.target)"
    ]
   },
@@ -804,17 +814,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'svm_proba' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-a40814f6ccb3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mforest_clf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtraining_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtraining_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mforest_proba\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mforest_clf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict_proba\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalidation_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mroc_auc_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalidation_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msvm_proba\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'svm_proba' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "forest_clf= RandomForestClassifier(n_estimators = 500, n_jobs = -1)\n",
+    "forest_clf.fit(training_data[features], training_data.target)\n",
+    "forest_proba = forest_clf.predict_proba(validation_data[features])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.79619606120578745"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(validation_data.target, forest_proba[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "forest_clf= RandomForestClassifier(n_estimators = 500, njobs = -1)\n",
-    "forest_clf.fit(training_data[features], training_data.target)\n",
-    "forest_proba = forest_clf.predict_proba(validation_data[features])\n",
-    "roc_auc_score(validation_data.target, svm_proba[:, 1])"
+    "import xgboost as xgb\n",
+    "\n",
+    "dtrain = xgb.DMatrix(training_data[list(set(data.columns) - {'event_id'})])\n",
+    "param = {'bst:max_depth':3, 'bst:eta':1, 'silent':1, 'objective':'binary:logistic' }\n",
+    "param['nthread'] = 4\n",
+    "param['eval_metric'] = 'auc'\n",
+    "bst = xgb.train(param, dtrain, 5)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -826,20 +896,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# predict test sample\n",
-    "kaggle_proba = knn.predict_proba(test[high_level_features])[:, 1]\n",
+    "kaggle_proba = forest_clf.predict_proba(test[features])[:, 1]\n",
     "kaggle_ids = test.event_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -850,10 +920,10 @@
        "<a href='datasets/baseline.csv' target='_blank'>datasets/baseline.csv</a><br>"
       ],
       "text/plain": [
-       "/Users/antares/Yandex.Disk.localized/projects/MLHEP/mlhep2016/higgs_kaggle/datasets/baseline.csv"
+       "/notebooks/higgs_kaggle/datasets/baseline.csv"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,6 +937,15 @@
     "    \n",
     "create_solution(kaggle_ids, kaggle_proba)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
