Update through everware

--- a/day_1/basic_seminars/1.1 Numpy - seminar.ipynb
+++ b/day_1/basic_seminars/1.1 Numpy - seminar.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -41,25 +41,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 0, 3],\n",
-       "       [0, 1, 2]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.array([[1, 0, 3], [0, 1, 2]])"
+    "a = np.array([[1]*5, [1,1,2,2,2]])\n",
+    "a\n",
+    "a = a.transpose()\n",
+    "h = np.linalg.inv(np.dot(a.transpose(), a))\n",
+    "h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "hat = np.dot(a, h)\n",
+    "hat = np.dot(hat, a.transpose())\n",
+    "hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.dot(hat, hat)"
    ]
   },
   {
